--- a/form.css
+++ b/form.css
@@ -20,7 +20,32 @@ form,input{
 
 }
 
+a{
+    color: bisque;
+    text-decoration: none;
 
+}
+
+.navMenu {
+    position:absolute;
+    top: 3%;
+    left: 70%;
+    transform: translate(-0%, -50%)
+    }
+  
+  .navMenu a {
+    color: #f6f4e6;
+    text-decoration: none;
+    font-size: 1.2em;
+    text-transform: uppercase;
+    font-weight: 300;
+    display:inline-flexbox;
+    width: 80px;    
+    }
+  
+  .navMenu a:hover {
+    color: #fd3afd;
+}
 body{
     background-image: url('form.jpg');
     background-size:cover;
